package proto_ff;
import "Com.proto";
import "ComDefine.proto";

////////////////////////////////////////////////////////////////////////////

//1-2:护送信息返回	NOTIFY_CONVOY_INFO
message NotifyConvoyInfo
{
	optional int32 daynum = 1;			//已护送次数
	optional uint64 endTime = 2;		//当前有押送的镖车，任务未来结束时间戳
	optional int32 	genEscortId = 3;	//刷新生成的镖车ID
	optional int32 freeNum = 4;		//已使用免费次数
}
//2-1:接受护送任务	CLIENT_CONVOY_ACCEPT_REQ
message ConvoyAcceptReq
{

}
//2-2:接护送任务结果	CLIENT_CONVOY_ACCEPT_RSP
message ConvoyAcceptRsp
{
	optional int32 ret = 1;
}

//3：护送任务奖励  NOTIFY_CONVOY_REWARD
message NotifyConvoyReward
{
	optional int64 exp = 1;
	repeated ComPair64 items = 2;
}

//4:护送任务超时	NOTIFY_CONVOY_TIMEOUT_RSP
message ConvoyTimeOutNotify
{
	optional int32 escortId = 1; //镖车ID
}

//5-1:刷新镖车 CLIENT_CONVOY_REFRESH_REQ
message RefreshEscortReq
{
	optional bool   onekey = 1;	//一键刷新
}
//5-2:刷新镖车结果 CLIENT_CONVOY_REFRESH_RSP
message RefreshEscortRsp
{
	optional int32 ret = 1;				//刷新结果
	optional int32 genEscortId = 2; 	//生成的镖车ID
	optional int32 refreshTimes = 3;	//刷新次数
	optional int32 costMoneyCount =4; 	//消耗货币数量
	optional int32 costItemCount = 5;	//消耗物品数量
	optional bool  onekey = 6;	//一键刷新
}

